korjaus: Lisätty puuttuvia assertioita ReservationServiceTests testeihin